@@ -3,10 +3,9 @@ package com.example.onlineshopping.user.role;
 import com.example.onlineshopping.user.permission.Permission;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
+//import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -16,7 +15,14 @@ import static com.example.onlineshopping.user.permission.Permission.*;
 @RequiredArgsConstructor
 public enum Role {
 
-    USER(Collections.emptySet()),
+    USER(
+            Set.of(
+                    USER_READ,
+                    USER_CREATE,
+                    USER_UPDATE,
+                    USER_DELETE
+            )
+    ),
 
     ADMIN(
             Set.of(
@@ -38,13 +44,13 @@ public enum Role {
     @Getter
     private final Set<Permission> permissions;
 
-    public List<SimpleGrantedAuthority> getAuthorities() {
-        var authorities = getPermissions()
-                .stream()
-                .map(authority -> new SimpleGrantedAuthority(authority.getPermission()))
-                .collect(Collectors.toList());
-        authorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
-        return authorities;
-    }
+//    public List<SimpleGrantedAuthority> getAuthorities() {
+//        var authorities = getPermissions()
+//                .stream()
+//                .map(authority -> new SimpleGrantedAuthority(authority.getPermission()))
+//                .collect(Collectors.toList());
+//        authorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
+//        return authorities;
+//    }
 
 }
